--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,12 @@ node_js:
 before_install:
     - "npm config set spin false"
     - "npm install -g npm@^5"
+    - "npm install -g codecov"
 install:
     - npm install
 script:
     - npm run test
 build: 
     - npm run build
+after_success:
+  - codecov
